# autohooks-plugin-mypy

./: .pylintrc  README.md  pyproject.toml
.github/workflows/: ci-python.yml  deploy-pypi.yml
autohooks/plugins/mypy/: __version__.py  mypy.py
tests/: test_mypy.py
