[tool.poetry]
name = "autohooks-plugin-mypy"
version = "0.1.4"
description = "An autohooks plugin for python code static typing check with mypy"
authors = ["Vincent Texier <vit@free.fr>"]
license = "GPL-3.0-or-later"
packages = [
  { include = "autohooks" },
]
keywords = [
  "git",
  "static",
  "typing",
  "hooks",
  "mypy",
]

[tool.poetry.dependencies]
python = "^3.7.0"
autohooks = ">=21.7.0"
mypy = "^0.910"

[tool.poetry.dev-dependencies]
autohooks-plugin-black = ">=21.7.1"
autohooks-plugin-pylint = ">=21.6.0"
autohooks-plugin-isort = ">=22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autohooks]
mode = "poetry"
pre-commit = [
    "autohooks.plugins.isort",
    "autohooks.plugins.black",
    "autohooks.plugins.pylint"
]

[tool.isort]
profile = "black"
