[tool.poetry]
name = "autohooks-plugin-mypy"
version = "0.1.4"
description = "An autohooks plugin for python code static typing check with mypy"
authors = ["Vincent Texier <vit@free.fr>", "Greenbone Networks GmbH <info@greenbone.net>"]
license = "GPL-3.0-or-later"
keywords = [
  "git",
  "static",
  "typing",
  "hooks",
  "mypy",
]
classifiers = [
  # Full list: https://pypi.org/pypi?%3Aaction=list_classifiers
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
homepage = "https://github.com/greenbone/autohooks-plugin-mypy"
repository = "https://github.com/greenbone/autohooks-plugin-mypy"
packages = [
  { include = "autohooks" },
  { include = "tests", format = "sdist"},
]

[tool.poetry.dependencies]
python = "^3.7.0"
autohooks = ">=21.7.0"
mypy = "^0.910"

[tool.poetry.dev-dependencies]
autohooks-plugin-black = ">=21.7.1"
autohooks-plugin-pylint = ">=21.6.0"
autohooks-plugin-isort = ">=22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autohooks]
mode = "poetry"
pre-commit = [
    "autohooks.plugins.isort",
    "autohooks.plugins.black",
    "autohooks.plugins.pylint"
]

[tool.isort]
profile = "black"
